2001-09-04  Earnie Boyd  <earnie@SF.Net>

	* lib/Makefile.in: Move the setting of variable libdir to after the
	setting of exec_prefix since the value of libdir is dependant on it.

Tue Sep  4 14:15:59 2001  Christopher Faylor <cgf@cygnus.com>

	* include/winbase.h: Add missing closing parentheses to
	InterlockedExchangePointer declaration.

2001-09-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (CFSTR_* ): Add new defines.
	Thanks to: "Ron" <ron@debian.org> . 
	Unicode them.

Sat Sep  1 10:40:37 2001  Christopher Faylor <cgf@cygnus.com>

	* include/winnt.h: Use defined(_ANONYMOUS_STRUCT) to determine if
	anonymous structs are available rather than just testing preprocessor
	variable directly.

Fri Aug 31 21:46:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Change definition of `SYSTEM_LUID' to comply
	with new `LARGE_INTEGER' definition.
 
Thu Aug 30 09:35:51 2001  Christopher Faylor <cgf@cygnus.com>

	* include/winsock2.h: Remove "extra token" after #endif.

2001-08-31  Earnie Boyd  <earnie@SF.Net>

	* config.guess: Remove the \r from the end of line.
	* config.sub: Ditto.

2001-08-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: Allow anonymous struct in [U]LARGE_INTEGER
	if __cplusplus as well as if _ANONYMOUS_STRUCT.

2001-08-29  Earnie Boyd  <earnie@SF.Net>

	* config.guess: Add the MSYS system.
	* config.sub: Ditto.
	* include/winsock.h: Add the __INSIDE_MSYS__ protections.
	* incldue/winsock2.h: Ditto.

2001-08-29  Eric Kohl  <ekohl@users.sourceforge.net>

	* include/winnt.h: Allow anonymous (Xxx.LowPart) or
	non-anonymous (Xxx.u.LowPart) access to HighPart and
	LowPart of a LARGE_INTEGER or ULARGE_INTEGER.

2001-08-24  TAMURA Kent  <tkent@users.sourceforge.net>

	* include/wingdi.h (HANGUL_CHARSET): Add define.

2001-08-21  Earnie Boyd  <earnie@SF.Net>

	* include/setupapi.h: Formatting.

2001-08-21  Earnie Boyd  <earnie@SF.Net>

	* include/shlobj.h: Remove \r from the line endings.
